refactor : DB에 70개의 퀘스트를 추가한다